syntax="proto3";

package city;

option go_package="/";

import "google/protobuf/empty.proto";

service CityService {
    rpc GetAllCities(google.protobuf.Empty) returns (GetAllCitiesResponse) {}
    rpc GetCityByID(GetCityByIDRequest) returns (GetCityByIDResponse) {}
    rpc GetCitiesByIDs(GetCitiesByIDsRequest) returns (GetCitiesByIDsResponse) {}
}

// GetAllCities
message GetAllCitiesResponse {
    Header header = 1;
    repeated CityData data = 2;
}

// GetCityByID
message GetCityByIDRequest {
    GetCityByIDInput request = 1;
}

message GetCityByIDInput {
    string id = 1;
}

message GetCityByIDResponse {
    Header header = 1;
    CityData data = 2;
}

// GetCitiesByIDs
message GetCitiesByIDsRequest {
    GetCitiesByIDsInput request = 1;
}

message GetCitiesByIDsInput {
    repeated string id = 1;
}

message GetCitiesByIDsResponse {
    Header header = 1;
    repeated CityData data = 2;
}

// Base Data
message CityData {
    string cityID = 1;
    string cityName = 2;
    string cityType = 3;
    string provinceID = 4;
}

message Header {
    int32 status = 1;
    repeated string message = 2;
}

message OptionalString {
    string value = 1;
    bool hasSet = 2;
}
